@@ -4,26 +4,6 @@ return [
 
     /*
     |--------------------------------------------------------------------------
-    | Enable DAV feature
-    |--------------------------------------------------------------------------
-    |
-    | Enable or disable DAV completely.
-    |
-    */
-    'enabled' => (bool) env('DAV_ENABLED', (bool) env('CARDDAV_ENABLED', false)),
-
-    /*
-    |--------------------------------------------------------------------------
-    | DAV Path
-    |--------------------------------------------------------------------------
-    |
-    | Path for all DAV requests.
-    |
-    */
-    'path' => 'dav',
-
-    /*
-    |--------------------------------------------------------------------------
     | Default Gender name for VCard imports
     |--------------------------------------------------------------------------
     |
