@@ -7,6 +7,7 @@ New features:
 
 Enhancements:
 
+* Add ability to enable DAV for some users
 * Group relationships in create/edit forms
 * Rewrite contact search fields
 * Use string and array classes instead of helpers
